cmake_minimum_required(VERSION 3.10)
project(cairo-xemmai VERSION 202211)
find_package(xemmai 202211 REQUIRED)
find_package(PkgConfig)
pkg_check_modules(CAIRO REQUIRED cairo>=1.8)
find_package(JPEG)
add_subdirectory(src)
enable_testing()
add_subdirectory(test)
install(TARGETS cairo DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
